@@ -16,7 +16,7 @@ if int(os.environ.get('STDEB_CHECK_DEBIAN_PYTHON','1')):
 setup(name='stdeb',
       # Keep version in sync with stdeb/__init__.py, Install section
       # of README.rst, and USER_AGENT in scripts/pypi-install.
-      version='0.7.1',
+      version='0.7.2',
       author='Andrew Straw',
       author_email='strawman@astraw.com',
       description='Python to Debian source package conversion utility',
