@@ -1,5 +1,8 @@
 = Unreleased =
 
+2014-07-10 Remove the check for pyc files that was causing scipy build
+           to fail.
+
 2014-05-18 Verify SSL certificates when talking to PyPI. Requires
            requests >= 0.8.8.
 
